@@ -1,0 +1,148 @@
+NC_045512_2	22	46	varskip-0317-1_01_LEFT	1	+
+NC_045512_2	559	581	varskip-0317-1_01_RIGHT	1	-
+NC_045512_2	418	443	varskip-0317-1_02_LEFT	2	+
+NC_045512_2	976	998	varskip-0317-1_02_RIGHT	2	-
+NC_045512_2	841	863	varskip-0317-1_03_LEFT	1	+
+NC_045512_2	1402	1424	varskip-0317-1_03_RIGHT	1	-
+NC_045512_2	1277	1299	varskip-0317-1_04_LEFT	2	+
+NC_045512_2	1821	1844	varskip-0317-1_04_RIGHT	2	-
+NC_045512_2	1695	1717	varskip-0317-1_05_LEFT	1	+
+NC_045512_2	2228	2250	varskip-0317-1_05_RIGHT	1	-
+NC_045512_2	2061	2086	varskip-0317-1_06_LEFT	2	+
+NC_045512_2	2621	2643	varskip-0317-1_06_RIGHT	2	-
+NC_045512_2	2483	2508	varskip-0317-1_07_LEFT	1	+
+NC_045512_2	3043	3067	varskip-0317-1_07_RIGHT	1	-
+NC_045512_2	2923	2947	varskip-0317-1_08_LEFT	2	+
+NC_045512_2	3470	3492	varskip-0317-1_08_RIGHT	2	-
+NC_045512_2	3326	3355	varskip-0317-1_09_LEFT	1	+
+NC_045512_2	3887	3915	varskip-0317-1_09_RIGHT	1	-
+NC_045512_2	3753	3778	varskip-0317-1_10_LEFT	2	+
+NC_045512_2	4296	4322	varskip-0317-1_10_RIGHT	2	-
+NC_045512_2	4154	4180	varskip-0317-1_11_LEFT	1	+
+NC_045512_2	4714	4743	varskip-0317-1_11_RIGHT	1	-
+NC_045512_2	4594	4617	varskip-0317-1_12_LEFT	2	+
+NC_045512_2	5145	5168	varskip-0317-1_12_RIGHT	2	-
+NC_045512_2	5006	5028	varskip-0317-1_13_LEFT	1	+
+NC_045512_2	5555	5580	varskip-0317-1_13_RIGHT	1	-
+NC_045512_2	5340	5366	varskip-0317-1_14_LEFT	2	+
+NC_045512_2	5914	5939	varskip-0317-1_14_RIGHT	2	-
+NC_045512_2	5794	5817	varskip-0317-1_15_LEFT	1	+
+NC_045512_2	6341	6363	varskip-0317-1_15_RIGHT	1	-
+NC_045512_2	6217	6245	varskip-0317-1_16_LEFT	2	+
+NC_045512_2	6749	6776	varskip-0317-1_16_RIGHT	2	-
+NC_045512_2	6561	6594	varskip-0317-1_17_LEFT	1	+
+NC_045512_2	7124	7151	varskip-0317-1_17_RIGHT	1	-
+NC_045512_2	7000	7022	varskip-0317-1_18_LEFT	2	+
+NC_045512_2	7547	7574	varskip-0317-1_18_RIGHT	2	-
+NC_045512_2	7403	7429	varskip-0317-1_19_LEFT	1	+
+NC_045512_2	7984	8007	varskip-0317-1_19_RIGHT	1	-
+NC_045512_2	7836	7861	varskip-0317-1_20_LEFT	2	+
+NC_045512_2	8384	8409	varskip-0317-1_20_RIGHT	2	-
+NC_045512_2	8245	8269	varskip-0317-1_21_LEFT	1	+
+NC_045512_2	8818	8843	varskip-0317-1_21_RIGHT	1	-
+NC_045512_2	8685	8709	varskip-0317-1_22_LEFT	2	+
+NC_045512_2	9221	9243	varskip-0317-1_22_RIGHT	2	-
+NC_045512_2	9099	9121	varskip-0317-1_23_LEFT	1	+
+NC_045512_2	9644	9667	varskip-0317-1_23_RIGHT	1	-
+NC_045512_2	9478	9502	varskip-0317-1_24_LEFT	2	+
+NC_045512_2	10039	10061	varskip-0317-1_24_RIGHT	2	-
+NC_045512_2	9842	9865	varskip-0317-1_25_LEFT	1	+
+NC_045512_2	10396	10422	varskip-0317-1_25_RIGHT	1	-
+NC_045512_2	10269	10293	varskip-0317-1_26_LEFT	2	+
+NC_045512_2	10816	10838	varskip-0317-1_26_RIGHT	2	-
+NC_045512_2	10696	10719	varskip-0317-1_27_LEFT	1	+
+NC_045512_2	11243	11268	varskip-0317-1_27_RIGHT	1	-
+NC_045512_2	11092	11116	varskip-0317-1_28_LEFT	2	+
+NC_045512_2	11647	11670	varskip-0317-1_28_RIGHT	2	-
+NC_045512_2	11371	11393	varskip-0317-1_29_LEFT	1	+
+NC_045512_2	11921	11943	varskip-0317-1_29_RIGHT	1	-
+NC_045512_2	11824	11851	varskip-0317-1_30_LEFT	2	+
+NC_045512_2	12329	12353	varskip-0317-1_30_RIGHT	2	-
+NC_045512_2	12201	12226	varskip-0317-1_31_LEFT	1	+
+NC_045512_2	12752	12774	varskip-0317-1_31_RIGHT	1	-
+NC_045512_2	12632	12656	varskip-0317-1_32_LEFT	2	+
+NC_045512_2	13166	13188	varskip-0317-1_32_RIGHT	2	-
+NC_045512_2	13034	13058	varskip-0317-1_33_LEFT	1	+
+NC_045512_2	13599	13621	varskip-0317-1_33_RIGHT	1	-
+NC_045512_2	13479	13501	varskip-0317-1_34_LEFT	2	+
+NC_045512_2	14009	14031	varskip-0317-1_34_RIGHT	2	-
+NC_045512_2	13874	13901	varskip-0317-1_35_LEFT	1	+
+NC_045512_2	14417	14444	varskip-0317-1_35_RIGHT	1	-
+NC_045512_2	14290	14319	varskip-0317-1_36_LEFT	2	+
+NC_045512_2	14826	14855	varskip-0317-1_36_RIGHT	2	-
+NC_045512_2	14651	14675	varskip-0317-1_37_LEFT	1	+
+NC_045512_2	15191	15217	varskip-0317-1_37_RIGHT	1	-
+NC_045512_2	15064	15091	varskip-0317-1_38_LEFT	2	+
+NC_045512_2	15598	15622	varskip-0317-1_38_RIGHT	2	-
+NC_045512_2	15428	15450	varskip-0317-1_39_LEFT	1	+
+NC_045512_2	16007	16029	varskip-0317-1_39_RIGHT	1	-
+NC_045512_2	15862	15887	varskip-0317-1_40_LEFT	2	+
+NC_045512_2	16416	16443	varskip-0317-1_40_RIGHT	2	-
+NC_045512_2	16277	16299	varskip-0317-1_41_LEFT	1	+
+NC_045512_2	16842	16865	varskip-0317-1_41_RIGHT	1	-
+NC_045512_2	16689	16711	varskip-0317-1_42_LEFT	2	+
+NC_045512_2	17276	17305	varskip-0317-1_42_RIGHT	2	-
+NC_045512_2	17057	17082	varskip-0317-1_43_LEFT	1	+
+NC_045512_2	17621	17646	varskip-0317-1_43_RIGHT	1	-
+NC_045512_2	17476	17500	varskip-0317-1_44_LEFT	2	+
+NC_045512_2	18033	18059	varskip-0317-1_44_RIGHT	2	-
+NC_045512_2	17889	17915	varskip-0317-1_45_LEFT	1	+
+NC_045512_2	18441	18463	varskip-0317-1_45_RIGHT	1	-
+NC_045512_2	18311	18333	varskip-0317-1_46_LEFT	2	+
+NC_045512_2	18852	18876	varskip-0317-1_46_RIGHT	2	-
+NC_045512_2	18712	18737	varskip-0317-1_47_LEFT	1	+
+NC_045512_2	19247	19273	varskip-0317-1_47_RIGHT	1	-
+NC_045512_2	19092	19114	varskip-0317-1_48_LEFT	2	+
+NC_045512_2	19641	19669	varskip-0317-1_48_RIGHT	2	-
+NC_045512_2	19488	19515	varskip-0317-1_49_LEFT	1	+
+NC_045512_2	20037	20064	varskip-0317-1_49_RIGHT	1	-
+NC_045512_2	19885	19911	varskip-0317-1_50_LEFT	2	+
+NC_045512_2	20462	20484	varskip-0317-1_50_RIGHT	2	-
+NC_045512_2	20340	20366	varskip-0317-1_51_LEFT	1	+
+NC_045512_2	20890	20912	varskip-0317-1_51_RIGHT	1	-
+NC_045512_2	20766	20792	varskip-0317-1_52_LEFT	2	+
+NC_045512_2	21314	21338	varskip-0317-1_52_RIGHT	2	-
+NC_045512_2	21194	21219	varskip-0317-1_53_LEFT	1	+
+NC_045512_2	21724	21753	varskip-0317-1_53_RIGHT	1	-
+NC_045512_2	21537	21566	varskip-0317-1_54_LEFT	2	+
+NC_045512_2	22091	22113	varskip-0317-1_54_RIGHT	2	-
+NC_045512_2	21926	21955	varskip-0317-1_55_LEFT	1	+
+NC_045512_2	22480	22510	varskip-0317-1_55_RIGHT	1	-
+NC_045512_2	22347	22373	varskip-0317-1_56_LEFT	2	+
+NC_045512_2	22879	22907	varskip-0317-1_56_RIGHT	2	-
+NC_045512_2	22749	22776	varskip-0317-1_57_LEFT	1	+
+NC_045512_2	23288	23310	varskip-0317-1_57_RIGHT	1	-
+NC_045512_2	23122	23144	varskip-0317-1_58_LEFT	2	+
+NC_045512_2	23681	23708	varskip-0317-1_58_RIGHT	2	-
+NC_045512_2	23545	23567	varskip-0317-1_59_LEFT	1	+
+NC_045512_2	24112	24134	varskip-0317-1_59_RIGHT	1	-
+NC_045512_2	23979	24002	varskip-0317-1_60_LEFT	2	+
+NC_045512_2	24518	24541	varskip-0317-1_60_RIGHT	2	-
+NC_045512_2	24375	24397	varskip-0317-1_61_LEFT	1	+
+NC_045512_2	24924	24948	varskip-0317-1_61_RIGHT	1	-
+NC_045512_2	24789	24811	varskip-0317-1_62_LEFT	2	+
+NC_045512_2	25331	25353	varskip-0317-1_62_RIGHT	2	-
+NC_045512_2	25171	25200	varskip-0317-1_63_LEFT	1	+
+NC_045512_2	25725	25754	varskip-0317-1_63_RIGHT	1	-
+NC_045512_2	25575	25600	varskip-0317-1_64_LEFT	2	+
+NC_045512_2	26120	26143	varskip-0317-1_64_RIGHT	2	-
+NC_045512_2	25970	25995	varskip-0317-1_65_LEFT	1	+
+NC_045512_2	26497	26525	varskip-0317-1_65_RIGHT	1	-
+NC_045512_2	26359	26381	varskip-0317-1_66_LEFT	2	+
+NC_045512_2	26905	26927	varskip-0317-1_66_RIGHT	2	-
+NC_045512_2	26706	26728	varskip-0317-1_67_LEFT	1	+
+NC_045512_2	27256	27283	varskip-0317-1_67_RIGHT	1	-
+NC_045512_2	27081	27103	varskip-0317-1_68_LEFT	2	+
+NC_045512_2	27647	27671	varskip-0317-1_68_RIGHT	2	-
+NC_045512_2	27485	27511	varskip-0317-1_69_LEFT	1	+
+NC_045512_2	28051	28076	varskip-0317-1_69_RIGHT	1	-
+NC_045512_2	27835	27859	varskip-0317-1_70_LEFT	2	+
+NC_045512_2	28380	28400	varskip-0317-1_70_RIGHT	2	-
+NC_045512_2	28219	28243	varskip-0317-1_71_LEFT	1	+
+NC_045512_2	28783	28805	varskip-0317-1_71_RIGHT	1	-
+NC_045512_2	28627	28649	varskip-0317-1_72_LEFT	2	+
+NC_045512_2	29203	29225	varskip-0317-1_72_RIGHT	2	-
+NC_045512_2	29062	29088	varskip-0317-1_73_LEFT	1	+
+NC_045512_2	29617	29644	varskip-0317-1_73_RIGHT	1	-
+NC_045512_2	29270	29292	varskip-0317-1_74_LEFT	2	+
+NC_045512_2	29799	29831	varskip-0317-1_74_RIGHT	2	-
