@@ -1,0 +1,296 @@
+>varskip-0317-1_01_LEFT
+GGTAACAAACCAACCAACTTTCGA
+>varskip-0317-1_01_RIGHT
+CACCAAGTGTCTCACCACTACG
+>varskip-0317-1_02_LEFT
+GGCTTAGTAGAAGTTGAAAAAGGCG
+>varskip-0317-1_02_RIGHT
+AACGTTCCGTGTACCAAGCAAT
+>varskip-0317-1_03_LEFT
+CCTGATGGCTACCCTCTTGAGT
+>varskip-0317-1_03_RIGHT
+ATTCGGCAAGACTATGCTCAGG
+>varskip-0317-1_04_LEFT
+AAGCCACTTGCGAATTTTGTGG
+>varskip-0317-1_04_RIGHT
+TCTGTTCACCAATATTCCAGGCA
+>varskip-0317-1_05_LEFT
+GGCATCTTTTTCTGCTTCCACA
+>varskip-0317-1_05_RIGHT
+CCACCGACAATTTCACAAGCAC
+>varskip-0317-1_06_LEFT
+CTACATTACAGGTGGTGTTGTTCAG
+>varskip-0317-1_06_RIGHT
+ATTTCGAGCAACATAAGCCCGT
+>varskip-0317-1_07_LEFT
+TCTTCTTAGAGGGAGAAACACTTCC
+>varskip-0317-1_07_RIGHT
+ACCTTCTTCTTCATCCTCATCTGG
+>varskip-0317-1_08_LEFT
+TCTGAATTACTTACACCACTGGGC
+>varskip-0317-1_08_RIGHT
+TTTAAGGCTCCTGCAACACCTC
+>varskip-0317-1_09_LEFT
+AGACTATTGAAGTGAATAGTTTTAGTGGT
+>varskip-0317-1_09_RIGHT
+TCAGTTATAAATGGCTTAACTTCCTCTT
+>varskip-0317-1_10_LEFT
+AGTTTGTGTAGATACTGTTCGCACA
+>varskip-0317-1_10_RIGHT
+AGGCACTTTTACACTTTTTAAGCACT
+>varskip-0317-1_11_LEFT
+CTGCTGTGGTTATACCTACTAAAAAG
+>varskip-0317-1_11_RIGHT
+GAAGAAGTAAGATAACCATTATACGCTGT
+>varskip-0317-1_12_LEFT
+ACTCTTGTTACAATGCCACTTGG
+>varskip-0317-1_12_RIGHT
+AGTACTCAAAAGCCTCAACACGT
+>varskip-0317-1_13_LEFT
+CGCAAGTTGTGGACATGTCAAT
+>varskip-0317-1_13_RIGHT
+CCCATGTACATAACAGCTTCTACAC
+>varskip-0317-1_14_LEFT
+ACCTGCTCTACAAGATGCTTATTACA
+>varskip-0317-1_14_RIGHT
+TTTCTGTACAAACAACACCATCCAA
+>varskip-0317-1_15_LEFT
+ACTTTGTATTGCATAGACGGTGC
+>varskip-0317-1_15_RIGHT
+GCGTCCTCTGACTTCAGTACAT
+>varskip-0317-1_16_LEFT
+TTGTTACATAAACCTATTGTTTGGCATG
+>varskip-0317-1_16_RIGHT
+AAGGCATATAATTAGTACAAACACGGT
+>varskip-0317-1_17_LEFT
+TGTAGACAATTCTAGTCTTACTATTAAGAAACC
+>varskip-0317-1_17_RIGHT
+CTAAACCACTAAGACAAACACTACAAG
+>varskip-0317-1_18_LEFT
+TCAACCGCTGCTTTAGGTGTTT
+>varskip-0317-1_18_RIGHT
+AGACATAAAAGGACCTTCTAACACCAT
+>varskip-0317-1_19_LEFT
+TGGTTAGAATGTACATCTTCTTTGCA
+>varskip-0317-1_19_RIGHT
+CCAACATCAGACACTAATGCCTG
+>varskip-0317-1_20_LEFT
+AGACAACCTGAGAGCTAATAACACT
+>varskip-0317-1_20_RIGHT
+ACGTTCCATATCAAAGCAATGTTGT
+>varskip-0317-1_21_LEFT
+TCTGACATAGAAGTTACTGGCGAT
+>varskip-0317-1_21_RIGHT
+TTGTTATGACTGCAGCAATCAATGG
+>varskip-0317-1_22_LEFT
+AGGATACAAGGCTATTGATGGTGG
+>varskip-0317-1_22_RIGHT
+TCTGATCTTTCACAAGTGCCGT
+>varskip-0317-1_23_LEFT
+TGAAAGTTTACGCCCTGACACA
+>varskip-0317-1_23_RIGHT
+AGGTGTGAACATAACCATCCACT
+>varskip-0317-1_24_LEFT
+GGTGAATACAGTCATGTAGTTGCC
+>varskip-0317-1_24_RIGHT
+AACCACTCTGCAAAACAGCTGA
+>varskip-0317-1_25_LEFT
+TGCGTAGTGATGTGCTATTACCT
+>varskip-0317-1_25_RIGHT
+GATGGTGAACCATTGTAACAAGCTAA
+>varskip-0317-1_26_LEFT
+TGTTCAACTCAGGGTTATTGGACA
+>varskip-0317-1_26_RIGHT
+AAACGGCAATTCCAGTTTGAGC
+>varskip-0317-1_27_LEFT
+GGAGACAGGTGGTTTCTCAATCG
+>varskip-0317-1_27_RIGHT
+TCCAACCATGTCATAATACGCATCA
+>varskip-0317-1_28_LEFT
+GCCTTTTTACCTTTTGCTATGGGT
+>varskip-0317-1_28_RIGHT
+CGGTTGAGTAAACAAAAGAGGCC
+>varskip-0317-1_29_LEFT
+GATGGTGCTAGGAGAGTGTGGA
+>varskip-0317-1_29_RIGHT
+TGGACACATTGAGCCCACAATT
+>varskip-0317-1_30_LEFT
+AAAGTAGCCACTGTACAGTCTAAAATG
+>varskip-0317-1_30_RIGHT
+GCATAGCACTAGTAACTTTTGCCC
+>varskip-0317-1_31_LEFT
+GTTGAAGAAGTCTTTGAATGTGGCT
+>varskip-0317-1_31_RIGHT
+GCTAACGCATTGTCATCAGTGC
+>varskip-0317-1_32_LEFT
+CATGGCCTCTTATTGTAACAGCTT
+>varskip-0317-1_32_RIGHT
+ATTGCCTGACCAGTACCAGTGT
+>varskip-0317-1_33_LEFT
+CAACAGAAGTGCCTGCCAATTCAA
+>varskip-0317-1_33_RIGHT
+CGTCCTTTTCTTGGAAGCGACA
+>varskip-0317-1_34_LEFT
+GTAAGTGCAGCCCGTCTTACAC
+>varskip-0317-1_34_RIGHT
+TCGCATGGCATCACAGAATTGT
+>varskip-0317-1_35_LEFT
+ACTTGTCACATACAATTGTTGTGATGA
+>varskip-0317-1_35_RIGHT
+ACAAATATTTTTCTCACTAGTGGTCCA
+>varskip-0317-1_36_LEFT
+ACCGTTATTTTAAATATTGGGATCAGACA
+>varskip-0317-1_36_RIGHT
+ACAAATAGTAGTTGTCTGATATCACACAT
+>varskip-0317-1_37_LEFT
+TGTTGCTTTTCAAACTGTCAAACC
+>varskip-0317-1_37_RIGHT
+TGCTTGTTCCAATTACTACAGTAGCT
+>varskip-0317-1_38_LEFT
+TGAATCTTAAGTATGCCATTAGTGCAA
+>varskip-0317-1_38_RIGHT
+AAAGTCTGTGTTGTAAATTGCGGA
+>varskip-0317-1_39_LEFT
+GAGTGAAATGGTCATGTGTGGC
+>varskip-0317-1_39_RIGHT
+AGCTAAAGACACGAACCGTTCA
+>varskip-0317-1_40_LEFT
+GACCTCATGAATTTTGCTCTCAACA
+>varskip-0317-1_40_RIGHT
+GCTCATACCTCCTAAGTAAAGTTGAGT
+>varskip-0317-1_41_LEFT
+AAGATGTGGTGCTTGCATACGT
+>varskip-0317-1_41_RIGHT
+ACAACAGCATCACCATAGTCACC
+>varskip-0317-1_42_LEFT
+GCTACTGTACGTGAAGTGCTGT
+>varskip-0317-1_42_RIGHT
+AGACATACTGTTCTAATGTTGAATTCACT
+>varskip-0317-1_43_LEFT
+GCAAAAGTATTCTACACTCCAGGGA
+>varskip-0317-1_43_RIGHT
+TTGAGCTGATTTGTCTTTATGTGCT
+>varskip-0317-1_44_LEFT
+AGGGCACACTAGAACCAGAATATT
+>varskip-0317-1_44_RIGHT
+AGTCCTGTTACATTTTCAGCTTGTAA
+>varskip-0317-1_45_LEFT
+ACAGCTCACTCTTGTAATGTAAACAG
+>varskip-0317-1_45_RIGHT
+GCGGTGGTTTAGCACTAACTCT
+>varskip-0317-1_46_LEFT
+CGAGGGGTGTCATGCTACTAGA
+>varskip-0317-1_46_RIGHT
+ACACCTAGTCATGATTGCATCACA
+>varskip-0317-1_47_LEFT
+CCTGTTGGCATCATTCTATTGGATT
+>varskip-0317-1_47_RIGHT
+GCAAGTTAAGGTTAGATAGCACTCTA
+>varskip-0317-1_48_LEFT
+GATGCACAGCCTTGTAGTGACA
+>varskip-0317-1_48_RIGHT
+CATCAAAGTGTCCCTTATTTACAACATT
+>varskip-0317-1_49_LEFT
+TGTAGACATCATGCTAATGAGTACAGA
+>varskip-0317-1_49_RIGHT
+AACACTACCTTCTGTAATAAGAACACC
+>varskip-0317-1_50_LEFT
+AAAGAGATGCTCCAGCACATATATCT
+>varskip-0317-1_50_RIGHT
+AGATGAACCTGTTTGCGCATCT
+>varskip-0317-1_51_LEFT
+AGTCATAGTCAGTTAGGTGGTTTACA
+>varskip-0317-1_51_RIGHT
+AAAACAGCTGTACCTGGTGCAA
+>varskip-0317-1_52_LEFT
+CCTAAAGGCATAATGATGAATGTCGC
+>varskip-0317-1_52_RIGHT
+TTTGCATGCATGACATAACCATCT
+>varskip-0317-1_53_LEFT
+TCTTTATAAGCTCATGGGACACTTC
+>varskip-0317-1_53_RIGHT
+CAAGTAACATTGGAAAAGAAAGGTAAGAA
+>varskip-0317-1_54_LEFT
+GTTCTTGTTAACAACTAAACGAACAATGT
+>varskip-0317-1_54_RIGHT
+CCCTGTTTTCCTTCAAGGTCCA
+>varskip-0317-1_55_LEFT
+ACGCTACTAATGTTGTTATTAAAGTCTGT
+>varskip-0317-1_55_RIGHT
+AGAAGTTTGATAGATTCCTTTTTCTACAGT
+>varskip-0317-1_56_LEFT
+TGCAGCTTATTATGTGGGTTATCTTC
+>varskip-0317-1_56_RIGHT
+AATTACCACCAACCTTAGAATCAAGATT
+>varskip-0317-1_57_LEFT
+TGCAGATTCATTTGTAATTAGAGGTGA
+>varskip-0317-1_57_RIGHT
+TCAAGTGTCTGTGGATCACGGA
+>varskip-0317-1_58_LEFT
+CCAGCAACTGTTTGTGGACCTA
+>varskip-0317-1_58_RIGHT
+TGGGTATGGCAATAGAGTTATTAGAGT
+>varskip-0317-1_59_LEFT
+TGTGACATACCCATTGGTGCAG
+>varskip-0317-1_59_RIGHT
+GGCCGTTAAACTTTTGTGCACA
+>varskip-0317-1_60_LEFT
+ACCAGATCCATCAAAACCAAGCA
+>varskip-0317-1_60_RIGHT
+AATTTGCACTTCAGCCTCAACTT
+>varskip-0317-1_61_LEFT
+TTCTTCCACAGCAAGTGCACTT
+>varskip-0317-1_61_RIGHT
+ACAACATCACAGTTACCAGACACA
+>varskip-0317-1_62_LEFT
+AACTGCTCCTGCCATTTGTCAT
+>varskip-0317-1_62_RIGHT
+ACTGGCTCAGAGTCGTCTTCAT
+>varskip-0317-1_63_LEFT
+GGAAAGTATGAGCAGTATATAAAATGGCC
+>varskip-0317-1_63_RIGHT
+ACAAAGTTTATACTCTGCAAGAAGTAGAC
+>varskip-0317-1_64_LEFT
+ATCATAACCCTCAAAAAGAGATGGC
+>varskip-0317-1_64_RIGHT
+CGTCGATTGTGTGAATTTGGACA
+>varskip-0317-1_65_LEFT
+GGAATCTGGAGTAAAAGACTGTGTT
+>varskip-0317-1_65_RIGHT
+CATGGCTAAAATTAAAGTTCCAAACAGA
+>varskip-0317-1_66_LEFT
+TGTGTGCGTACTGCTGCAATAT
+>varskip-0317-1_66_RIGHT
+TTCTAGAAGCGGTCTGGTCAGA
+>varskip-0317-1_67_LEFT
+TAGCTTGTTTTGTGCTTGCTGC
+>varskip-0317-1_67_RIGHT
+TCCAAATGGAAACTTTAAAAGTCCTCA
+>varskip-0317-1_68_LEFT
+TAGCAGGTGACTCAGGTTTTGC
+>varskip-0317-1_68_RIGHT
+ACTTCCTCTTGTCTGATGAACAGT
+>varskip-0317-1_69_LEFT
+AAAAGAACCTTGCTCTTCTGGAACAT
+>varskip-0317-1_69_RIGHT
+GCACAATTCAATTAAAGGTGCTGAT
+>varskip-0317-1_70_LEFT
+CTTTTGGTTCTCACTTGAACTGCA
+>varskip-0317-1_70_RIGHT
+GGGGCCGACGTTGTTTTGAT
+>varskip-0317-1_71_LEFT
+AGAGTATCATGACGTTCGTGTTGT
+>varskip-0317-1_71_RIGHT
+CTCTGCTCCCTTCTGCGTAGAA
+>varskip-0317-1_72_LEFT
+GCTGGACTTCCCTATGGTGCTA
+>varskip-0317-1_72_RIGHT
+ACATTCCGAAGAACGCTGAAGC
+>varskip-0317-1_73_LEFT
+GCCACTAAAGCATACAATGTAACACA
+>varskip-0317-1_73_RIGHT
+TTGTGCTATGTAGTTACGAGAATTCAT
+>varskip-0317-1_74_LEFT
+ACACAGGTGCCATCAAATTGGA
+>varskip-0317-1_74_RIGHT
+GCACTACTAAAATTAATTTTACACATTAGGGC
