@@ -708,8 +708,10 @@
 					<label for="edge-porechop-sw6" title="swift_primer_schemes_v2">SWIFT</label>
 					<input type="radio" data-mini="true" name="edge-porechop-sw" id="edge-porechop-sw7" value="Pacbio_sarscov2_freed_primers">
 					<label for="edge-porechop-sw7" title="sarscov2_freed_primers">Freed</label>
-					<input type="radio" data-mini="true" name="edge-porechop-sw" id="edge-porechop-sw8" value="0" checked="checked">
-					<label for="edge-porechop-sw8">Off</label>
+					<input type="radio" data-mini="true" name="edge-porechop-sw" id="edge-porechop-sw8" value="NEB_VarSkip.scheme">
+					<label for="edge-porechop-sw8" title="Varskip_V1a">Varskip_V1a</label>
+					<input type="radio" data-mini="true" name="edge-porechop-sw" id="edge-porechop-sw9" value="0" checked="checked">
+					<label for="edge-porechop-sw9">Off</label>
 				</fieldset>
 			</div>
 			<div class="ui-field-contain">
