@@ -3,6 +3,9 @@
 ## build 2021
 * update Tomcat 7.0.92 to 7.0.109 for vulnerable patch
 * update pangolin to 3.1.14
+* fix bug on vaccined_received metadata parsing
+* fix bug on consensus composition file parsing
+* add Varskip primer scheme option for trimming
 
 ## build 20211001
 * cleanup intermediate files
